--- a/window_elite/window/css/style.css
+++ b/window_elite/window/css/style.css
@@ -350,6 +350,8 @@ padding-bottom: 30px;
 .made_works_container img {
 	display: inline-block;
 	padding: 0 5px;
+	width: 231px;
+	height: 192px;
 }
 /*how_we_work*/
 .how_we_work_container {
