--- a/window_elite/window/css/style.css
+++ b/window_elite/window/css/style.css
@@ -841,7 +841,7 @@ a.control_next {
     height: 145px;
 }
 .wrapper_slider {
-	width: 370px;
+	width: 360px;
 	padding: 0;
 }
 .callback_btn {
@@ -1224,6 +1224,9 @@ padding: 50px 0;
 	}
 	.carusel_item {
     width: 300px;
+}
+.bx-controls-direction {
+	display: none!important;
 }
 }
 @media (max-width: 770px) {
