--- a/window_elite/window/css/style.css
+++ b/window_elite/window/css/style.css
@@ -449,6 +449,7 @@ line-height: 30px;
 text-align: center;
 font-weight: 300;
 padding: 20px 0;
+height: 120px;
 }
 .payment_item_text {
 	font-family: 'Myriad Pro Condensed';
