--- a/window/css/style.css
+++ b/window/css/style.css
@@ -11,10 +11,7 @@
     font-family: 'Myriad Pro';
     src: url(../fonts/Myriad-Pro_31655.ttf);
 }
-@font-face {
-    font-family: 'Myriad Pro Light';
-    src: url(../fonts/Myriad-Pro-Light-SemiCondensed_31639.ttf);
-}
+
 @font-face {
     font-family: 'OpenSans';
     src: url(../fonts/OpenSans-Light.ttf);
@@ -59,7 +56,6 @@ ul li span {
 }
 img {
 	max-width: 100%;
-	height: 100%;
 }
 header {
 	padding-top: 21px;
@@ -176,7 +172,7 @@ text-transform: uppercase;
   border-radius: 4px;
 }
 .wrapper_slider {
-	width: 935px;
+	width: 925px;
 }
 #slider ul {
   position: relative;
@@ -185,7 +181,7 @@ text-transform: uppercase;
   height: 245px;
   list-style: none;
   overflow: hidden;
-  width: 935px;
+  width: 925px;
 }
 
 #slider ul li {
@@ -194,7 +190,7 @@ text-transform: uppercase;
   float: left;
   margin: 0;
   padding: 0;
-  width: 935px;
+  width: 925px;
   height: 245px;
   background-image: url(img/banner.png);
   background-size: 100% 100%;
@@ -282,13 +278,14 @@ a.control_next {
 }
 
 .production_head {
-	font-family: 'Myriad Pro';
+	font-family: 'Myriad Pro Condensed';
 color:  #b0b1b3;
 font-size: 30px;
 line-height: 24px;
 text-align: center;
 padding-top: 70px;
 padding-bottom: 42px;
+font-weight: 300;
 }
 .production_item {
 	text-align: center;
@@ -342,6 +339,7 @@ line-height: 24px;
 text-align: center;
 padding-top: 30px;
 padding-bottom: 30px;
+font-weight: 300;
 }
 .made_works_container {
 	text-align: center;
@@ -350,6 +348,8 @@ padding-bottom: 30px;
 .made_works_container img {
 	display: inline-block;
 	padding: 0 5px;
+	width: 231px;
+	height: 192px;
 }
 /*how_we_work*/
 .how_we_work_container {
@@ -364,6 +364,7 @@ line-height: 24px;
 text-align: center;
 padding-top: 70px;
 padding-bottom: 40px;
+font-weight: 300;
 }
 .how_we_work_container {
 	text-align: center;
@@ -438,13 +439,14 @@ text-align: center;
 }
 
 .payment_item_head {
-	font-family: 'Myriad Pro Condensed';
+font-family: 'Myriad Pro Condensed';
 color:  #292c2b;
 font-size: 29px;
 line-height: 30px;
 text-align: center;
 font-weight: 300;
 padding: 20px 0;
+height: 120px;
 }
 .payment_item_text {
 	font-family: 'Myriad Pro Condensed';
@@ -547,6 +549,7 @@ color:  #000000;
 font-size: 29px;
 line-height: 39px;
 text-align: center;
+font-weight: 300;
 }
 .item_slider {
     text-align: center;
@@ -585,12 +588,12 @@ text-align: center;
 
 .carusel_hider {
     margin: 0 auto 50px;
-    width: 700px;
+    width: 790px;
     overflow: hidden;
 }
 
 .carusel_item {
-    width: 350px;
+    width: 360px;
     text-align: left;
     float: left;
     padding: 20px 20px;
@@ -836,7 +839,7 @@ a.control_next {
     height: 145px;
 }
 .wrapper_slider {
-	width: 370px;
+	width: 360px;
 	padding: 0;
 }
 .callback_btn {
@@ -846,6 +849,9 @@ a.control_next {
 }
 .arrow_right {
 	right: 0;
+}
+.arrow_left {
+	left: 10px;
 }
 .window_row {
 	padding: 10px 10px;
@@ -867,17 +873,19 @@ a.control_next {
     margin-right: 5px;
 }
 .header_number_item {
-	word-spacing: 2px;
-	font-size: 12px;
+	word-spacing: 1px;
+	font-size: 10px;
 }
-.how_we_work_item {
-	width: 45%;
-}
+
 .main_slider {
 	padding-bottom: 0;
 }
 }
-
+@media (max-width: 640px) {
+	.how_we_work_item {
+	width: 45%;
+}
+}
 #modal_form {
 	border-radius: 4px;
 	border-style: solid;
@@ -890,7 +898,7 @@ a.control_next {
 	background: #fff;
 	position: fixed; /* чтoбы oкнo былo в видимoй зoне в любoм месте */
 	display: none; /* в oбычнoм сoстoянии oкнa не дoлжнo быть */
-	opacity: 0; /* пoлнoстью прoзрaчнo для aнимирoвaния */
+	opacity: 1; /* пoлнoстью прoзрaчнo для aнимирoвaния */
 	z-index: 5; /* oкнo дoлжнo быть нaибoлее бoльшем слoе */
 	padding: 20px 10px;
 	z-index: 9999;
@@ -933,7 +941,7 @@ a.control_next {
 	background: #fff;
 	position: fixed; /* чтoбы oкнo былo в видимoй зoне в любoм месте */
 	display: none; /* в oбычнoм сoстoянии oкнa не дoлжнo быть */
-	opacity: 0; /* пoлнoстью прoзрaчнo для aнимирoвaния */
+	opacity: 1; /* пoлнoстью прoзрaчнo для aнимирoвaния */
 	z-index: 5; /* oкнo дoлжнo быть нaибoлее бoльшем слoе */
 	padding: 20px 10px;
 	z-index: 9999;
@@ -972,7 +980,7 @@ box-shadow: 0px 0px 18px 0px #e9e9e9;
 	background-color:  #ffffff;
 	position: fixed; /* чтoбы oкнo былo в видимoй зoне в любoм месте */
 	display: none; /* в oбычнoм сoстoянии oкнa не дoлжнo быть */
-	opacity: 0; /* пoлнoстью прoзрaчнo для aнимирoвaния */
+	opacity: 1; /* пoлнoстью прoзрaчнo для aнимирoвaния */
 	z-index: 5; /* oкнo дoлжнo быть нaибoлее бoльшем слoе */
 	padding: 20px 10px;
 	z-index: 9999;
@@ -1123,6 +1131,13 @@ font-size: 14px;
 line-height: 24px;
 text-align: left;
 }
+label[for=name_footer] {
+	font-family: 'Myriad Pro Condensed';
+color:  #b0b1b3;
+font-size: 14px;
+line-height: 24px;
+text-align: left;
+}
 label[for=phone] {
 	font-family: 'Myriad Pro Condensed';
 color:  #b0b1b3;
@@ -1130,7 +1145,14 @@ font-size: 14px;
 line-height: 24px;
 text-align: left;
 }
-#name, #phone {
+label[for=phone_footer] {
+	font-family: 'Myriad Pro Condensed';
+color:  #b0b1b3;
+font-size: 14px;
+line-height: 24px;
+text-align: left;
+}
+#name, #phone, #name_footer, #phone_footer{
 	border-radius: 2px;
 border-style: solid;
 border-width: 1px;
@@ -1140,7 +1162,7 @@ background-color:  #ffffff;
 width: 195px;
 height: 30px;
 }
-#submit {
+#submit, #submit_footer {
 	border-radius: 2px;
 background-color:  #a2bd30;
 box-shadow: 0px 2px 0px 0px #6d8213;
@@ -1157,6 +1179,10 @@ margin-top: 20px;
 transition: all 0.5s ease;
 }
 #submit:hover {
+	background-color: #cae360;
+    box-shadow: 0px 2px 0px 0px #cae360;
+}
+#submit_footer:hover {
 	background-color: #cae360;
     box-shadow: 0px 2px 0px 0px #cae360;
 }
@@ -1200,6 +1226,9 @@ padding: 50px 0;
 	.carusel_item {
     width: 300px;
 }
+.bx-controls-direction {
+	display: none!important;
+}
 }
 @media (max-width: 770px) {
 	#modal_form1, #modal_form4, #modal_form5 {
@@ -1208,7 +1237,6 @@ padding: 50px 0;
 	}
 	.product_card_img a {
 		float: left;    
-		width: 45%;
 		margin-left: 5px;
 	}
 	.product_card_img {
@@ -1243,16 +1271,27 @@ padding: 50px 0;
 }
 @media (max-width: 960px) and (min-width: 600px) {
 	.wrapper_slider {
-    width: 600px;
+    width: 580px;
 }
 }
 @media (max-width: 320px) {
 	.wrapper_slider {
     width: 320px;
-    height: 200px
 }
 .bx-wrapper .bx-viewport {
 	left: 0!important;
-
 }
+.bx-controls-direction {
+	display: none!important;
+}
+}
+@media (max-width: 850px) and (min-width: 700px) {
+	#modal_form1, #modal_form4, #modal_form5 {
+		width: 75%;
+	}
+}
+@media (max-width: 1200px) and (min-width: 800px) {
+	#modal_form1, #modal_form4, #modal_form5 {
+		width: 69%;
+	}
 }
