--- a/portfoliopage/css/style.css
+++ b/portfoliopage/css/style.css
@@ -47,6 +47,132 @@ License URI:
 /************************* */
 /* 1. BASE */
 /************************* */
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Black.ttf");
+	font-weight: 900;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Black-Italic.ttf");
+	font-weight: 900;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-ExtraBold.ttf");
+	font-weight: 800;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Bold-Italic.ttf");
+	font-weight: 700;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Bold.ttf");
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-ExtraBold-Italic.ttf");
+	font-weight: 800;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-SemiBold.ttf");
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-SemiBold-Italic.ttf");
+	font-weight: 600;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Medium.ttf");
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Medium-Italic.ttf");
+	font-weight: 500;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Regular.ttf");
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Light-Italic.ttf");
+	font-weight: 400;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Light.ttf");
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Light-Italic.ttf");
+	font-weight: 300;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-ExtraLight.ttf");
+	font-weight: 200;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-ExtraLight-Italic.ttf");
+	font-weight: 200;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Thin.ttf");
+	font-weight: 100;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Raleway";
+	src: url("../fonts/Raleway-Thin-Italic.ttf");
+	font-weight: 100;
+	font-style: italic;
+}
+
 
 
 body {
