--- a/portfoliopage/css/style.css
+++ b/portfoliopage/css/style.css
@@ -2479,7 +2479,7 @@ a.about-icon {
     position: absolute!important;
     top: 70%!important;
     bottom: 0!important;
-    width: 30px!important;
+    width: 35px!important;
     height: 40px!important;
     margin-bottom: -40px!important;
     font-size: 20px;
@@ -2488,6 +2488,9 @@ a.about-icon {
     text-shadow: 0 1px 2px rgba(0,0,0,0.6);
     background-color: gray!important;
     opacity: 1!important;
+}
+.carousel-control:hover {
+	background-color: #000!important;
 }
 .columns {
 	-webkit-column-count: 3; /* Chrome, Safari, Opera */
@@ -2677,29 +2680,29 @@ a.about-icon {
 	padding: 30px 0;
 }
 body{
-  scrollbar-base-color: #C0C0C0;
-  scrollbar-base-color: #C0C0C0;
-  scrollbar-3dlight-color: #C0C0C0;
-  scrollbar-highlight-color: #C0C0C0;
-  scrollbar-track-color: #EBEBEB;
-  scrollbar-arrow-color: black;
-  scrollbar-shadow-color: #C0C0C0;
-  scrollbar-dark-shadow-color: #C0C0C0;
+  scrollbar-base-color: #7a7a7a;
+  scrollbar-base-color: #7a7a7a;
+  scrollbar-3dlight-color: #7a7a7a;
+  scrollbar-highlight-color: #7a7a7a;
+  scrollbar-track-color: #7a7a7a;
+  scrollbar-arrow-color: #7a7a7a;
+  scrollbar-shadow-color: #7a7a7a;
+  scrollbar-dark-shadow-color: #7a7a7a;
 }
 /*mozilla scrolbalken*/
 @-moz-document url-prefix(http://),url-prefix(https://) {
 scrollbar {
    -moz-appearance: none !important;
-   background: rgb(0,255,0) !important;
+   background: #7a7a7a !important;
 }
 thumb,scrollbarbutton {
    -moz-appearance: none !important;
-   background-color: rgb(0,0,255) !important;
+   background-color: ##7a7a7a !important;
 }
 
 thumb:hover,scrollbarbutton:hover {
    -moz-appearance: none !important;
-   background-color: rgb(255,0,0) !important;
+   background-color: #7a7a7a !important;
 }
 
 scrollbarbutton {
@@ -2716,7 +2719,7 @@ scrollbar[orient="vertical"] {
     top: 0; bottom: 0; left: 0; right: 0;
     margin: 20px;
 
-    border: 4px solid rgba(0, 0, 0, 0.2);
+    border: 4px solid #7a7a7a;
     overflow: auto;
     background-color: whiteSmoke;
 }
@@ -2725,11 +2728,11 @@ scrollbar[orient="vertical"] {
     background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: #7a7a7a;
     border: solid whiteSmoke 4px;
 }
 ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: #7a7a7a;
 }
 @media (max-width: 560px) {
 .wrapper_mac_portfolio {
