--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -30,6 +30,14 @@ li {
 }
 header {
 	color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+}
+.second_layer {
+	background: #fff;
 }
 img {
 	max-width: 100%;
@@ -47,7 +55,10 @@ img {
 }
 
 .first_layer {
-	background-color: #243b00;
+  background-image: -moz-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
+
 }
 
 .number {
@@ -72,6 +83,12 @@ img {
 	border: 1px solid #fff;
     border-radius: 10px;
     padding: 5px;
+    transition: 0.3s ease;
+}
+.callback_btn:hover {
+	border: 1px solid #243b00;
+	background: #fff;
+	color: #243b00; 
 }
 .nav_item {
 	float: left;
@@ -111,6 +128,13 @@ img {
 	color: #243b00;
 	text-decoration: none;
 	padding: 5px 15px;
+	transition: 0.3s ease;
+}
+.nav_item_link:hover {
+	border-top: 4px solid #fff;
+	-webkit-box-shadow: 5px 5px 3px 0px rgba(255,255,255,1);
+-moz-box-shadow: 5px 5px 3px 0px rgba(255,255,255,1);
+box-shadow: 5px 5px 3px 0px rgba(255,255,255,1);
 }
 .nav_item:last-child {
 	border:none;
@@ -205,9 +229,9 @@ background-color: #fff;
 }
 #partners .owl-buttons div{
     background-color: #fff;
-    border: 2px solid rgb( 243, 198, 68 );
+    border: 2px solid #2c4700;
     border-radius: 50%;
-    color: rgb( 243, 198, 68 );
+    color: #2c4700;
     font-size: 25px;
     line-height: 24px;
     padding-top: 0;
@@ -354,34 +378,31 @@ background-color: #fff;
 	width: 25%;
 	float: left;
 	padding-left: 10%;
-	height:220px;
   background-color: rgb( 36, 59, 0 );
-      padding-top: 3%;
+      padding-top: 50px;
+
 }
 .column-3 {
 	width: 14%;
 	float: left;
-	height:240px;
 	background-color: rgb( 36, 59, 0 );
-	    padding-top: 3%;
+	    padding-top: 50px;
 
 }
 .column-4 {
 	width: 15%;
 	float: left;
-	height: 285px;
+	height: 305px;
 	background-color: #fff;
 	/*display: table;*/
 }
 .column-5 {
 	width: 36%;
 	float: left;
-	height: 285px;
+	height: 305px;
 }
 
-.col-1 img {
-	float: left;
-}
+
 .footer_item {
 	overflow: hidden;
 }
@@ -401,6 +422,7 @@ background-color: #fff;
 	 font-size: 20px;
   font-family: "OpenSans", sans-serif;
   color: rgb( 255, 255, 255 );
+  line-height: 30px;
 }
 
 .footer_cont {
@@ -428,8 +450,9 @@ background-color: #fff;
 .footer_contacts {
 	background-color: #fff;
 	color: #617c44;
-	padding-top: 40%;
+	padding-top: 70px;
 	padding-left: 10px;
+	padding-right: 10px;
 }
 .footer_contacts tr {
 	    line-height: 20px;
@@ -545,7 +568,9 @@ label[for=name] {
 
 #submit {
     border-radius: 2px;
-    background-color: #2c4700;
+  background-image: -moz-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
     box-shadow: 0px 2px 0px 0px #2c4700;
     width: 195px;
     height: 37px;
