--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -49,6 +49,12 @@ img {
 	position: absolute;
 	top: 5px;
 	z-index: 3;
+	border: 2px solid #2c4700;
+    border-radius: 50%;
+}
+.footer_summary img {
+	    border: 2px solid #2c4700;
+    border-radius: 50%;
 }
 .container_right {
 	float: right;
@@ -58,11 +64,10 @@ img {
   background-image: -moz-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
   background-image: -webkit-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
   background-image: -ms-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
-
 }
 
 .number {
-	color: #55781e;
+	color: rgb( 148, 170, 60);;
 	float: left;
 	padding: 10px  10px 10px 5px;
 }
@@ -86,9 +91,8 @@ img {
     transition: 0.3s ease;
 }
 .callback_btn:hover {
-	border: 1px solid #243b00;
-	background: #fff;
-	color: #243b00; 
+	border: 1px solid rgb( 148, 170, 60);
+	background-color: rgb( 148, 170, 60);
 }
 .nav_item {
 	float: left;
@@ -105,12 +109,10 @@ img {
     transition: 0.3s ease;
 }
 .lang_item:hover {
-    background-color: #fff;
-    border: 1px solid #243b00;
+    background-color: rgb( 148, 170, 60);
+    border: 1px solid rgb( 148, 170, 60);
 }
-.lang_item:hover .lang_item_link {
-	color: #243b00;
-}
+
 .nav {
 	 border: 0 solid #243b00;
 	 float: left;
@@ -119,22 +121,22 @@ img {
 	float: right;
 }
 .nav_item {
-	color: #243b00;
-	border: 0 solid #243b00;
+    color: #243b00;
+    border: 0 solid #243b00;
     border-width: 0px 1px 0 0;
-    margin: 5px 0;
+    margin: 7px 0;
 }
 .nav_item_link {
-	color: #243b00;
-	text-decoration: none;
-	padding: 5px 15px;
-	transition: 0.3s ease;
+    color: #243b00;
+    text-decoration: none;
+    padding: 8px 15px;
+    transition: 0.3s ease;
+    /* margin: 10px 0; */
 }
 .nav_item_link:hover {
-	border-top: 4px solid #fff;
-	-webkit-box-shadow: 5px 5px 3px 0px rgba(255,255,255,1);
--moz-box-shadow: 5px 5px 3px 0px rgba(255,255,255,1);
-box-shadow: 5px 5px 3px 0px rgba(255,255,255,1);
+	background-color: rgb( 148, 170, 60);
+    border-radius: 6px;
+    color: #fff;
 }
 .nav_item:last-child {
 	border:none;
@@ -145,7 +147,6 @@ box-shadow: 5px 5px 3px 0px rgba(255,255,255,1);
 	text-decoration: none;
 }
 .lang_item_link:hover {
-	color:#243b00;
 	text-decoration: none;
 }
 .lang_item_link:focus {
@@ -179,7 +180,7 @@ box-shadow: 5px 5px 3px 0px rgba(255,255,255,1);
 height: 0;
 border-style: solid;
 border-width: 0 9px 8px 9px;
-border-color: transparent transparent #243b00 transparent;
+border-color: transparent transparent #94aa3c transparent;
     position: absolute;
     top: -8px;
     left: 50%;
@@ -191,7 +192,7 @@ border-color: transparent transparent #243b00 transparent;
     text-decoration: none;
     display: block;
     border-radius: 4px;
-    background-color: #243b00;
+    background-color: #94aa3c;
 }
 .dropdown-content a:hover {
 	border: 1px solid #fff;
@@ -224,8 +225,7 @@ background-color: rgba(226, 226, 226, 0.3);
 background-color: #fff;
 }
 #partners {
-	border-bottom: 1px solid rgb( 243, 198, 68 );
-	padding-bottom: 20px;
+	border-bottom: 1px solid #2c4700;
 }
 #partners .owl-buttons div{
     background-color: #fff;
@@ -289,6 +289,7 @@ background-color: #fff;
     border-bottom-right-radius: 35%;
     border-bottom-left-radius: 35%;
     background-color: #fff;
+    padding-bottom: 150px;
 }
 .bg {
 	background-image: url(../img/f.png);
@@ -375,36 +376,39 @@ background-color: #fff;
 	line-height: 30px;
 }
 .column-2 {
-	width: 25%;
+	width: 39%;
 	float: left;
 	padding-left: 10%;
-  background-color: rgb( 36, 59, 0 );
+  background-image: -moz-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(36,59,0) 0%, rgb(60,97,0) 100%);
       padding-top: 50px;
 
 }
 .column-3 {
-	width: 14%;
 	float: left;
-	background-color: rgb( 36, 59, 0 );
-	    padding-top: 50px;
-
+	
 }
 .column-4 {
-	width: 15%;
+	width: 16%;
 	float: left;
-	height: 305px;
+	height: 325px;
 	background-color: #fff;
 	/*display: table;*/
 }
 .column-5 {
-	width: 36%;
+	width: 35%;
 	float: left;
-	height: 305px;
+	height: 325px;
 }
 
 
 .footer_item {
 	overflow: hidden;
+}
+.footer_summary {
+	width: 69%;
+	float: left;
 }
  .footer_text {
 	padding: 0 10px;
@@ -434,7 +438,7 @@ background-color: #fff;
 .footer_nav_item {
 	padding: 10px 0;
 	border-left: 1px solid #fff;
-	padding-left: 10px;
+	padding-left: 25px;
 }
 .footer_nav_item:first-child {
 	padding-top: 0;
@@ -450,7 +454,7 @@ background-color: #fff;
 .footer_contacts {
 	background-color: #fff;
 	color: #617c44;
-	padding-top: 70px;
+	padding-top: 80px;
 	padding-left: 10px;
 	padding-right: 10px;
 }
@@ -462,8 +466,10 @@ background-color: #fff;
 }
 footer {
 	background-color: rgb( 36, 59, 0 );
+	height: 325px;
 }
 .copyright {
+	padding-top: 5px;
   font-size: 12px;
   font-family: "OpenSans";
   color: rgb( 60, 97, 0 );
@@ -471,6 +477,7 @@ footer {
   -moz-transform: scale(0.999, 1);
   -webkit-transform: scale(0.999, 1);
   -ms-transform: scale(0.999, 1); 
+  float: left;
 }
 .copyright a {
 	color: #fff;
